[build-system]
requires = ["setuptools >= 80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wynn_api"
version = "0.0.1"
description = "blank for now"
authors = [
    {name="edvin-bite", email="snackpackbpg@gmail.com"}
]
readme = "README.md"
requires-python = ">= 3.13"
dependencies = [
    "requests>=2.32.5",
    'importlib-metadata; python_version<"3.10"',
]

[project.scripts]
wynn-leaderboards = "cli:leaderboards"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
]