[build-system]
requires = ["setuptools >= 80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wynn_api"
version = "0.0.1"
description = "blank for now"
keywords = ["wynn", "wynncraft", "Wynn API"]
authors = [
    {name="edvin-bite", email="snackpackbpg@gmail.com"}
]
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">= 3.13"
dependencies = [
    "requests>=2.32.5",
    'importlib-metadata; python_version<"3.10"',
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
repository = "https://github.com/edvin-bite/WynnAPI.git"

[project.scripts]
wynn-leaderboards = "cli:leaderboards"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests",
]
addopts = [
    "--import-mode=importlib",
    "--ra",
]
norecursedirs = [
    ".git",
    ".venv",
]
pythonpath = [
    "src",
]